--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,4 @@ Backup*/
 UpgradeLog*.XML
 .vs/
 /MechaRage/.idea/.idea.MechaRage/.idea/workspace.xml
+/MechaRage/.idea/.idea.MechaRage/.idea/workspace.xml
