--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,4 +9,4 @@
     
      steps:
        - checkout
-       - run: dotnet build ../MechaRage/
+       - run: dotnet build ../MechaRage/MechaRage.sln
