Add bullet art and remove idea file

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ UpgradeLog*.XML
 .vs/
 /MechaRage/.idea/.idea.MechaRage/.idea/workspace.xml
 /MechaRage/.idea/.idea.MechaRage/.idea/workspace.xml
+/MechaRage/.idea/.idea.MechaRage/.idea/contentModel.xml
